<resources>
    <string name="app_name">Munchkin</string>
    <string name="app_version">1.0.1</string>
    <string name="app_website">http://help</string>
    <string name="settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_munchkin">Add new munchkin</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="set">Set</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="end_yes">Yes, endgame</string>
    <string name="end_no">No, continue</string>
    <string name="dialog_level_fight">Fight</string>
    <string name="dialog_level_cancel">Cancel</string>
    <string name="dialog_level_title">Max level fight</string>
    <string name="end_message">Do you want endgame ?</string>
    <string name="dialog_edit_munchkin">Edit munchkin</string>
    <string name="dialog_set_max_level">Set max level</string>
    <string name="dialog_add_munchkin">Add new munchkin</string>
    <string name="name_munchkin">Name munchkin</string>
    <string name="please_add_new_munchkin_for_start_game">Please add new munchkin for start game</string>
    <string name="error_message_person">To fight, you need to add more than 1 person</string>
    <string name="level">Level</string>
    <string name="strength">Strength</string>
    <string name="finish">Finish</string>
    <string name="dice">Dice</string>
    <string name="ok">Ok</string>
    <string name="error_message_level">The level can not be less than 1</string>
    <string name="draw">Draw</string>
    <string name="player_win">Player</string>
    <string name="won_win">won!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="general">General</string>
    <string name="about_us">About us</string>
    <string name="version">Version</string>
    <string name="website">Website</string>
    <string name="rate_us">Rate us</string>
    <string name="go_to_app_evaluation">Go to app evaluation</string>
    <string name="max_level">Max level</string>
    <string name="max_level_fight_is">Max level fight is</string>
    <string name="you_can_change_ml">You can change the maximum level in the settings.</string>


</resources>
